overview in dev

--- a/themes/default/health/index.html
+++ b/themes/default/health/index.html
@@ -12,7 +12,93 @@
 
                 <div class="healthindex">
 
-                    <h4 class="page-title"> Health index </h4>
+                    <!-- START : SPORT SUMMARY  -->
+                    <section class="attendaceview">
+
+                        <h4 class="page-title"> Health Overview </h4>
+
+                        <div class="row mt-5">
+
+                            <!-- TOTAL SPORTS -->
+                            <div class="col-3">
+                                <div class="card">
+                                    <div class="card-header">
+                                        Total Students
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">700</h5>
+                                        <p class="card-text">
+                                            Male - <span class="text-success"> <i class="la la-male"></i> 400 </span><br/>
+                                            Female - <span class="text-success"> <i class="la la-female"></i> 300 </span>
+                                        </p>
+                                        <a href="{{ app.url}}/student" class="btn btn-xs btn-primary p-2">view details</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- TOTAL COACHES -->
+                            <div class="col-3">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <span class="text-success">Total Students Average BMI</span>
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><span class="text-success">50</span></h5>
+                                        <p class="card-text">
+                                            Male - <span class="text-success"> <i class="la la-male"></i>30</span><br/>
+                                            Female - <span class="text-success"> <i class="la la-female"></i> 20</span>
+                                        </p>
+                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- STUDENTS DOING SPORTS -->
+                            <div class="col-3">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <span class="text-danger">Total Students not in Average BMI</span>
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><span class="text-danger">120</span></h5>
+                                        <p class="card-text">
+                                            Male - <span class="text-danger"> <i class="la la-male"></i> 70 </span><br/>
+                                            Female - <span class="text-danger"> <i class="la la-female"></i> 50 </span>
+                                        </p>
+                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                    </div>
+                                </div>
+                            </div> 
+            
+                            <!-- ACHIEVEMENTS -->
+                            <div class="col-3">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <span class="text-warning">Total Disabled</span>
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title"><span class="text-warning">90</span></h5>
+                                        <p class="card-text">
+                                            Male - <span class="text-warning"> <i class="la la-male"></i>60</span><br/>
+                                            Female - <span class="text-warning"> <i class="la la-female"></i> 30</span>
+                                        </p>
+                                        <a href="{{ app.url}}/attendance/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </section>
+                    <!-- END : ATTENDANCE SUMMARY  -->
+
+                    <!-- START : CLASS VIEW ATTENDANCE -->
+                    <section class="attendance-class-view mt-5">
+
+                        <h4 class="page-title"> BMI in-Average/Disabled Graph Class wise </h4>
+                        <img src="https://lh4.googleusercontent.com/G7c_EDDarlte5Op54JJkxMKV4DkvKaM-ds6mqGeYvuyrZh0lSqmWopJ6myaCSYHr2avEVrFiyI8Vj0sC94izVP1YMlcm0d2TFVMFNcRmlqcsOvGV-SIdI_CmiilsAMPmLmXAdvtp" alt="">
+    
+                    </section>
+                    <!-- END : CLASS VIEW ATTENDANCE -->
 
                 </div>
             </div>
