--- a/themes/default/exam/index.html
+++ b/themes/default/exam/index.html
@@ -13,43 +13,37 @@
 
                 <div class="examindex">
 
-                    <h4 class="page-title"> Exam Overview</h4>
+                    <h4 class="page-title">Exam Overview</h4>
 
+                    <!-- START : UPCOMING EXAM -->
                     <section class="upcomingexam mt-5">
-                        <div class="row">
-
-                            <div class="card col p-0">
-                                <div class="card-header">
-                                    Upcoming exams
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">GCE O/L 2019</h5>
-                                    <p class="card-text"> from 05 Dec 2019 to 25 Dec 2019 </p>
-                                    <a href="#" class="badge badge-primary">view details</a>
-                                </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <span class="text-danger">Upcoming exams</span>
                             </div>
-
+                            <div class="card-body">
+                                <h5 class="card-title">GCE O/L 2019</h5>
+                                <p class="card-text"> Schedule - 05 Dec 2019 - 25 Dec 2019 </p>
+                                <a href="{{ app.url }}/exam/search" class="btn btn-sm btn-danger">view details</a>
+                            </div>
                         </div>
-
                     </section>
+                    <!-- END : UPCOMING EXAM -->
 
+                    <!-- START : RECENT EXAM -->
                     <section class="recentexam mt-4">
-                        <div class="row">
-
-                            <div class="card col p-0">
-                                <div class="card-header">
-                                    Recent exams
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">GCE O/L 2019</h5>
-                                    <p class="card-text"> from 05 Dec 2019 to 25 Dec 2019 </p>
-                                    <a href="#" class="badge badge-primary">view details</a>
-                                </div>
+                        <div class="card">
+                            <div class="card-header">
+                                Recent exams
                             </div>
-
+                            <div class="card-body">
+                                <h5 class="card-title">GCE O/L 2019</h5>
+                                <p class="card-text"> Schedule - 05 Dec 2019 - 25 Dec 2019 </p>
+                                <a href="{{ app.url }}/exam/search" class="btn btn-sm btn-primary">view details</a>
+                            </div>
                         </div>
-
                     </section>
+                    <!-- END : RECENT EXAM -->
 
                 </div>
             </div>
