--- a/themes/default/result/index.html
+++ b/themes/default/result/index.html
@@ -7,13 +7,62 @@
             
             {{ template.sidenav|raw }}
 
-            <div class="col-md-10 content">               
+            <div class="col-md-10 content">
+
                 {{ template.topmenu|raw }}
 
                 <div class="resultindex">
-                    <h4 class="page-title"> Result index </h4>
+
+                    <h4 class="page-title"> Result Overview </h4>
+
+                    <!-- START : UPCOMING EXAM -->
+                    <section class="upcomingexam mt-5">
+                        <div class="card">
+                            <div class="card-header">
+                                <span class="text-danger">Upcoming exams</span>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">GCE O/L 2019</h5>
+                                <p class="card-text"> Schedule - 05 Dec 2019 - 25 Dec 2019 </p>
+                                <a href="{{ app.url }}/exam/search" class="btn btn-sm btn-danger">view details</a>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- END : UPCOMING EXAM -->
+
+                    <!-- START : RECENT EXAM -->
+                    <section class="recentexam mt-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Recent exams
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">GCE O/L 2019</h5>
+                                <p class="card-text"> Schedule - 05 Dec 2019 - 25 Dec 2019 </p>
+                                <a href="{{ app.url }}/exam/search" class="btn btn-sm btn-primary">view details</a>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- END : RECENT EXAM -->
+
+                    <!-- START : RESULT RELEASED -->
+                    <section class="recentexam mt-4">
+                        <div class="card">
+                            <div class="card-header">
+                                Result Released
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">GCE O/L 2019</h5>
+                                <p class="card-text"> Schedule - 05 Dec 2019 - 25 Dec 2019 </p>
+                                <a href="{{ app.url }}/exam/search" class="btn btn-sm btn-primary">view details</a>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- END : RESULT RELEASED -->
+
                 </div>
             </div>
+
         </div>
     </div>
 
