upto users finished

--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -166,7 +166,7 @@
                     <div class="col-4 mx-auto">
                         <div class="card">
                             <div class="card-header">
-                                <h6 class="pull-left">STUDENT RELATIONSHIPS</h6>
+                                <h6 class="pull-left">PARENT RELATIONSHIPS</h6>
                                 <div class="button-group pull-right">
                                     <button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#modal_addrelation">ADD</button>
                                 </div>
