--- a/themes/default/sport/index.html
+++ b/themes/default/sport/index.html
@@ -111,6 +111,7 @@
 
                         <h4 class="page-title"> Students engage in sports by sport </h4>
                         <img src="https://lh4.googleusercontent.com/G7c_EDDarlte5Op54JJkxMKV4DkvKaM-ds6mqGeYvuyrZh0lSqmWopJ6myaCSYHr2avEVrFiyI8Vj0sC94izVP1YMlcm0d2TFVMFNcRmlqcsOvGV-SIdI_CmiilsAMPmLmXAdvtp" alt="">
+                        <img src="https://landing.moqups.com/img/content/charts-graphs/pie-donut-charts/simple-pie-chart/simple-pie-chart-1600.png" alt="" height="600" width="600">
     
                     </section>
                     <!-- END : CLASS VIEW ATTENDANCE -->
