--- a/themes/default/student/index.html
+++ b/themes/default/student/index.html
@@ -46,7 +46,7 @@
                                 <div class="card">
 
                                     <div class="card-header">
-                                        Present today
+                                        <span class="text-success">Present today</span>
                                     </div>
 
                                     <div class="card-body">
@@ -68,12 +68,12 @@
                                 <div class="card">
 
                                     <div class="card-header">
-                                        Absent today
+                                        <span class="text-danger">Absent today</span>
                                     </div>
 
                                     <div class="card-body">
 
-                                        <h5 class="card-title"><span class="text-danger">100</span></h5>
+                                        <h5 class="card-title"><span class1="text-danger">100</span></h5>
                                         <p class="card-text">
                                             Male - <span class="text-danger"> <i class="la la-male"></i>50</span><br/>
                                             Female - <span class="text-danger"> <i class="la la-female"></i> 50</span>
@@ -94,6 +94,7 @@
                     <section class="class-bar-chart mt-5">
                         <h4 class="page-title">Students in Classes</h4>
                         <img src="https://lh4.googleusercontent.com/G7c_EDDarlte5Op54JJkxMKV4DkvKaM-ds6mqGeYvuyrZh0lSqmWopJ6myaCSYHr2avEVrFiyI8Vj0sC94izVP1YMlcm0d2TFVMFNcRmlqcsOvGV-SIdI_CmiilsAMPmLmXAdvtp" alt="">
+                        <img src="https://landing.moqups.com/img/content/charts-graphs/pie-donut-charts/simple-pie-chart/simple-pie-chart-1600.png" alt="" height="600" width="600">
                     </section>
                     <!-- END : CLASS STUDENT TOTAL BAR GRAPH -->
 
