--- a/themes/default/parents/index.html
+++ b/themes/default/parents/index.html
@@ -10,12 +10,12 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="healthindex">
+                <div class="parentindex">
 
                     <!-- START : SPORT SUMMARY  -->
                     <section class="attendaceview">
 
-                        <h4 class="page-title"> Health Overview </h4>
+                        <h4 class="page-title"> Parent Overview </h4>
 
                         <div class="row mt-5">
 
@@ -23,15 +23,15 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-header">
-                                        Total Students
+                                        Total Parents
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title">700</h5>
+                                        <h5 class="card-title">1200</h5>
                                         <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i> 400 </span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> 300 </span>
+                                            Male - <span class="text-success"> <i class="la la-male"></i> 700 </span><br/>
+                                            Female - <span class="text-success"> <i class="la la-female"></i> 500 </span>
                                         </p>
-                                        <a href="{{ app.url}}/student" class="btn btn-xs btn-primary p-2">view details</a>
+                                        <a href="{{ app.url}}/parent" class="btn btn-xs btn-primary p-2">view details</a>
                                     </div>
                                 </div>
                             </div>
@@ -40,15 +40,15 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-header">
-                                        <span class="text-success">Total Students Average BMI</span>
+                                        <span class="text-success">Total Parents above Average Income</span>
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title"><span class="text-success">50</span></h5>
+                                        <h5 class="card-title"><span class="text-success">500</span></h5>
                                         <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i>30</span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> 20</span>
+                                            Male - <span class="text-success"> <i class="la la-male"></i>300</span><br/>
+                                            Female - <span class="text-success"> <i class="la la-female"></i> 200</span>
                                         </p>
-                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                        <a href="{{ app.url}}/parent/search" class="btn btn-xs btn-primary p-2">view details</a>
                                     </div>
                                 </div>
                             </div>
@@ -57,15 +57,15 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-header">
-                                        <span class="text-danger">Total Students not in Average BMI</span>
+                                        <span class="text-danger">Total Parents below Average Income</span>
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title"><span class="text-danger">120</span></h5>
+                                        <h5 class="card-title"><span class="text-danger">700</span></h5>
                                         <p class="card-text">
-                                            Male - <span class="text-danger"> <i class="la la-male"></i> 70 </span><br/>
-                                            Female - <span class="text-danger"> <i class="la la-female"></i> 50 </span>
+                                            Male - <span class="text-danger"> <i class="la la-male"></i> 400 </span><br/>
+                                            Female - <span class="text-danger"> <i class="la la-female"></i> 300 </span>
                                         </p>
-                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                        <a href="{{ app.url}}/parent/search" class="btn btn-xs btn-primary p-2">view details</a>
                                     </div>
                                 </div>
                             </div> 
@@ -74,15 +74,15 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-header">
-                                        <span class="text-warning">Total Disabled</span>
+                                        <span class="text-warning">Most listed Occupation</span>
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title"><span class="text-warning">90</span></h5>
                                         <p class="card-text">
-                                            Male - <span class="text-warning"> <i class="la la-male"></i>60</span><br/>
-                                            Female - <span class="text-warning"> <i class="la la-female"></i> 30</span>
+                                            Male - <span class="text-warning"> <i class="la la-male"></i>Officer</span><br/>
+                                            Female - <span class="text-warning"> <i class="la la-female"></i> Doctor</span>
                                         </p>
-                                        <a href="{{ app.url}}/attendance/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                        <a href="{{ app.url}}/parent/search" class="btn btn-xs btn-primary p-2">view details</a>
                                     </div>
                                 </div>
                             </div>
@@ -93,17 +93,20 @@
 
                     <!-- START : CLASS VIEW ATTENDANCE -->
                     <section class="attendance-class-view mt-5">
-                        <h4 class="page-title"> BMI in-Average Graph Class wise </h4>
+1
+                        <h4 class="page-title">Occupation bar chart and Pie Chart</h4>
                         <img src="https://lh4.googleusercontent.com/G7c_EDDarlte5Op54JJkxMKV4DkvKaM-ds6mqGeYvuyrZh0lSqmWopJ6myaCSYHr2avEVrFiyI8Vj0sC94izVP1YMlcm0d2TFVMFNcRmlqcsOvGV-SIdI_CmiilsAMPmLmXAdvtp" alt="">
                         <img src="https://landing.moqups.com/img/content/charts-graphs/pie-donut-charts/simple-pie-chart/simple-pie-chart-1600.png" alt="" height="600" width="600">
+    
                     </section>
                     <!-- END : CLASS VIEW ATTENDANCE -->
 
                     <!-- START : CLASS VIEW ATTENDANCE -->
                     <section class="attendance-class-view mt-5">
-                        <h4 class="page-title"> Disabled Graph Class wise </h4>
-                        <img src="https://lh4.googleusercontent.com/G7c_EDDarlte5Op54JJkxMKV4DkvKaM-ds6mqGeYvuyrZh0lSqmWopJ6myaCSYHr2avEVrFiyI8Vj0sC94izVP1YMlcm0d2TFVMFNcRmlqcsOvGV-SIdI_CmiilsAMPmLmXAdvtp" alt="">
+
+                        <h4 class="page-title">Income percentage Pie Chart</h4>
                         <img src="https://landing.moqups.com/img/content/charts-graphs/pie-donut-charts/simple-pie-chart/simple-pie-chart-1600.png" alt="" height="600" width="600">
+    
                     </section>
                     <!-- END : CLASS VIEW ATTENDANCE -->
 
