--- a/themes/default/attendance/index.html
+++ b/themes/default/attendance/index.html
@@ -28,8 +28,8 @@
                                     <div class="card-body">
                                         <h5 class="card-title">700</h5>
                                         <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i> 400 </span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> 300 </span>
+                                            Male -  <i class="la la-male"></i> 400<br/>
+                                            Female -  <i class="la la-female"></i> 300
                                         </p>
                                         <a href="{{ app.url}}/student/index" class="btn btn-xs btn-primary p-2">view details</a>
                                     </div>
@@ -39,7 +39,7 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-header">
-                                        Today Attendance / Absence
+                                        Today <span class="text-success">Attendance</span> / <span class="text-danger">Absence</span>
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title"><span class="text-success">600</span> / <span class="text-danger">100</span></h5>
@@ -61,8 +61,8 @@
                                     <div class="card-body">
                                         <h5 class="card-title">120</h5>
                                         <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i> 70 </span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> 50 </span>
+                                            Male -  <i class="la la-male"></i> 70<br/>
+                                            Female -  <i class="la la-female"></i> 50
                                         </p>
                                         <a href="{{ app.url}}/staff/index"> <span class="btn btn-xs btn-primary p-2">view details </span> </a>
                                     </div>
@@ -72,7 +72,7 @@
                             <div class="col-3">
                                 <div class="card">
                                     <div class="card-header">
-                                        Today Attendance / Absence
+                                        Today <span class="text-success">Attendance</span> / <span class="text-danger">Absence</span>
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title"><span class="text-success">90</span> / <span class="text-danger">30</span></h5>
