--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -11,7 +11,7 @@
 
                 {{ template.topmenu|raw }}
 
-                <div class="row">
+                <div class="row schoolindex">
 
                     <!-- START : CLASS MANAGER -->
                     <div class="col-4 mx-auto">
