--- a/themes/default/sport/index.html
+++ b/themes/default/sport/index.html
@@ -26,10 +26,10 @@
                                         Total Sports
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title">700</h5>
+                                        <h5 class="card-title">{{ sport.total.all}}</h5>
                                         <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i> 400 </span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> 300 </span>
+                                            Male - <span class="text-success"> <i class="la la-male"></i> &nbsp; </span><br/>
+                                            Female - <span class="text-success"> <i class="la la-female"></i> &nbsp; </span>
                                         </p>
                                         <a href="{{ app.url}}/school" class="btn btn-xs btn-primary p-2">view details</a>
                                     </div>
